--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
     -   docker
 
 before_install:
-    -   docker build -t DEV_BUILD -f Dockerfile.dev .
+    -   docker build -t dev_build -f Dockerfile.dev .
 
 script:
-    -   docker run -e CI=true DEV_BUILD npm run test
+    -   docker run -e CI=true dev_build npm run test
 
 
 
